--- a/demo-courier/src/app/app.component.html
+++ b/demo-courier/src/app/app.component.html
@@ -1,5 +1,36 @@
-<h5>David el Dios del front</h5>
-<span class="p-float-label">
-    <input id="float-input" type="text" pInputText> 
-    <label for="float-input">Username</label>
-</span>
+<div class="main">
+
+    <!--CABECERA-->
+    <nav class="menu">
+
+    </nav>
+
+    <!--BODY-->
+    <section class="container">
+
+        <!--Sección de datos generales-->
+        <div class="datos-generales">
+
+        </div>
+
+        <!--Sección de datos remitente-->
+        <div class="datos-remitente">
+
+        </div>
+
+        <!--Sección de datos destinatario-->
+        <div class="datos-destinatario">
+
+        </div>
+
+        <!--Sección de datos paquete-->
+        <div class="datos-paquete">
+
+        </div>
+
+        <!--Sección de datos pago-->
+        <div class="datos-pago">
+
+        </div>
+    </section>
+</div>
