--- a/demo-courier/src/app/app.component.html
+++ b/demo-courier/src/app/app.component.html
@@ -25,12 +25,12 @@
 
         <!--Sección de datos paquete-->
         <div class="datos-paquete">
-
+            <!--DAVID-->
         </div>
 
         <!--Sección de datos pago-->
         <div class="datos-pago">
-
+            <!--DAVID-->
         </div>
     </section>
 </div>
