--- a/demo-courier/src/styles.css
+++ b/demo-courier/src/styles.css
@@ -21,7 +21,7 @@ html {
 
 body {
     margin: 0;
-    background-color: #f3f3f3;
+    background-color: #e13636;
     width: 100%;
     height: 100%;
 }
