se agrego el menu

--- a/demo-courier/src/app/app.component.html
+++ b/demo-courier/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="main">
 
     <!--CABECERA-->
-    <nav class="menu">
-
+    <nav>
+        <p-tabMenu [model]="menu"></p-tabMenu>
     </nav>
 
     <!--BODY-->
