--- a/demo-courier/src/app/app.component.html
+++ b/demo-courier/src/app/app.component.html
@@ -2,7 +2,7 @@
 
     <!--CABECERA-->
     <nav>
-        <p-tabMenu [model]="menu"></p-tabMenu>
+        <p-tabMenu [model]="menu" [activeItem]="menu[3]"></p-tabMenu>
     </nav>
 
     <!--BODY-->
