--- a/demo-courier/src/app/app.component.html
+++ b/demo-courier/src/app/app.component.html
@@ -489,7 +489,7 @@
                             <input class="col" type="text" pInputText placeholder="[$ Monto]">
                         </div>
 
-                        <div class="col-12 md:col-1">
+                        <div class="col-12 md:col-1 pt-0">
                             <button
                                 pButton
                                 class="p-button-rounded p-button-text text-500"
